--- a/overrides/main.html
+++ b/overrides/main.html
@@ -29,8 +29,9 @@
   <script async defer data-domain="docs.photoprism.de" src="https://a.photoprism.app/js/plausible.js"></script>
 {% endblock %}
 {% block announce %}
-  <style>.md-announce a,.md-announce a:focus,.md-announce a:hover{color:currentColor}.md-announce strong{white-space:nowrap}.md-announce .twitter{margin-left:.2em;color:#00acee}</style>
-<a href="https://www.patreon.com/photoprism">
-  Unterstütze uns bei <strong>Patreon <span class="twemoji"><img src="/img/patreon.svg" alt="Patreon Logo" style="width: 16px; height: 16px;"></span></strong>
-</a>
+<div class="md-announce">
+  <a href="https://www.patreon.com/photoprism">
+       Unterstütze uns bei <strong>Patreon <span class="twemoji"><img src="/img/patreon.svg" alt="Patreon" style="width: 16px; height: 16px;"></span></strong>
+  </a>
+</div>
 {% endblock %}
