Upgrade MkDocs Material from v7.3.6 to 8.1.10

--- a/overrides/main.html
+++ b/overrides/main.html
@@ -29,7 +29,9 @@
   <script async defer data-domain="docs-de.photoprism.app" src="https://a.photoprism.app/js/plausible.js"></script>
 {% endblock %}
 {% block announce %}
+<p class="announce-banner">
 <a href="https://www.patreon.com/photoprism">
   Unterstütze uns bei <strong>Patreon <span class="twemoji"><img src="/img/patreon.svg" alt="Patreon" style="width: 16px; height: 16px;"></span></strong>
 </a>
+</p>
 {% endblock %}
