Site: Update Patreon URL in main.html

--- a/overrides/main.html
+++ b/overrides/main.html
@@ -30,7 +30,7 @@
 {% endblock %}
 {% block announce %}
 <p class="announce-banner">
-<a href="https://www.patreon.com/photoprism">
+<a href="https://link.photoprism.app/patreon">
   Unterstütze uns bei <strong>Patreon <span class="twemoji"><img src="/img/patreon.svg" alt="Patreon" style="width: 16px; height: 16px;"></span></strong>
 </a>
 </p>
