Site: Update main.html

--- a/overrides/main.html
+++ b/overrides/main.html
@@ -16,13 +16,13 @@
   <meta property="og:title" content="{{ title }}">
   <meta property="og:description" content="{{ description }}">
   <meta property="og:url" content="{{ page.canonical_url }}">
-  <meta property="og:image" content="https://i.photoprism.app/frame?style=centered%20blur&amp;title={{ caption | urlencode }}&amp;url={{ page.canonical_url | urlencode }}">
+  <meta property="og:image" content="https://i.photoprism.app/prism?cover=32&amp;caption=Docs&amp;title={{ caption | urlencode }}">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@photoprism_app">
   <meta name="twitter:creator" content="@photoprism_app">
   <meta name="twitter:title" content="{{ title }}">
   <meta name="twitter:description" content="{{ description }}">
-  <meta name="twitter:image" content="https://i.photoprism.app/frame?style=centered%20blur&amp;title={{ caption | urlencode }}&amp;url={{ page.canonical_url | urlencode }}">
+  <meta name="twitter:image" content="https://i.photoprism.app/prism?cover=32&amp;caption=Docs&amp;title={{ caption | urlencode }}">
   <link rel="shortcut icon" sizes="512x512" type="image/png" href="/icons/logo/512.png">
   <link rel="shortcut icon" sizes="256x256" type="image/png" href="/icons/logo/256.png">
   <link rel="shortcut icon" sizes="196x196" type="image/png" href="/icons/logo/196.png">
@@ -34,7 +34,7 @@
   <link rel="shortcut icon" sizes="72x72" type="image/png" href="/icons/logo/72.png">
   <link rel="shortcut icon" sizes="32x32" type="image/png" href="/icons/logo/32.png">
   <link rel="shortcut icon" sizes="16x16" type="image/png" href="/icons/logo/16.png">
-  <script async defer data-domain="docs-de.photoprism.app" src="https://a.photoprism.app/js/s.js"></script>
+  <script async defer data-domain="docs-de.photoprism.app" src="https://a.photoprism.app/js/s.outbound-links.js"></script>
 {% endblock %}
 {% block announce %}
 <p class="announce-banner">
