Site: Update membership banner

--- a/overrides/main.html
+++ b/overrides/main.html
@@ -38,8 +38,6 @@
 {% endblock %}
 {% block announce %}
 <p class="announce-banner">
-<a href="https://link.photoprism.app/patreon">
-  Unterstütze uns bei <strong>Patreon <span class="twemoji"><img src="/img/patreon.svg" alt="Patreon" style="width: 16px; height: 16px;"></span></strong>
-</a>
+  <a href="https://link.photoprism.app/membership">Werde noch heute Mitglied, unterstütze unsere Mission und genieße unsere Mitgliedervorteile! <span>💎</span></a>
 </p>
 {% endblock %}
