Site: Enable footer nav and update custom.css

--- a/overrides/main.html
+++ b/overrides/main.html
@@ -36,7 +36,7 @@
   <link rel="shortcut icon" sizes="16x16" type="image/png" href="/icons/logo/16.png">
   <script async defer data-domain="docs-de.photoprism.app" src="https://a.photoprism.app/js/s.outbound-links.js"></script>
 {% endblock %}
-{% block announce %}
+{% block _announce %}
 <p class="announce-banner">
   <a href="https://link.photoprism.app/membership">Werde noch heute Mitglied, unterstütze unsere Mission und genieße unsere Mitgliedervorteile! <span>💎</span></a>
 </p>
